--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
               <div class="icon">
                 <i class="lni-handshake"></i>
               </div>
-              <h4><a href="https://twitter.com/cryptoidolz">CryptoIdolz</a></h4>
-              <p>The first ever nude NFT collection on #Solana</p>
+              <h4><a href="https://www.overheadgains.com/">Overhead Gains</a></h4>
+              <p>All bots are multi-strategy trading algorithms, utilizing a balanced mix of technical indicators and pattern recognition.</p>
             </div>
           </div>
           <!-- End Col -->
@@ -124,8 +124,8 @@
               <div class="icon">
                 <i class="lni-handshake"></i>
               </div>
-              <h4><a href="https://twitter.com/SolanaCove">Solana Cove</a></h4>
-              <p>A new podcast</p>
+              <h4><a href="https://compendium.finance/">Solana Cove</a></h4>
+              <p>The best way to automate your crypto portfolio.</p>
             </div>
           </div>
           <!-- End Col -->
