--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           <div class="col-lg-6 col-md-12 col-xs-12">
             <div class="contents">
               <h2 class="head-title">Handcrafted Friendly Platty<br>NFT collectibles</h2>
-              <p>Following million years of evolution, the platypuses managed to escape the confinement of their physical bodies and migrate onto the Solana blockchain where they now reside.</p>
+              <p>Following millions of years of evolution, the platypuses have managed to escape the confinement of their physical bodies and migrate onto the Solana blockchain where they now reside.</p>
               <div class="header-button">
                 <a href="#showcase" class="btn btn-border-filled">Showcase</a>
                 <a href="#contact" class="btn btn-border page-scroll">Contact Us</a>
