--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                 <h2 class="section-title">Meet your friendly Platty</h2>
                 <div class="desc-text">
                   <p>The platypuses are known to have lived in Australia for millions of years. They are very cute and smart little animals who love to play with their friends.</p><br>
-                  <p>During million years of evolution, the platypuses managed to escape the confinement of their physical bodies and migrate onto the blockchain of Solana where they reside now.</p><br>
+                  <p>Following millions of years of evolution, the platypuses managed to escape the confinement of their physical bodies and migrate onto the Solana blockchain with the help of EndoMint where they reside now.</p><br>
                   <p>This is why we're helping them in their evolution by bringing them into the digital realm and externalizing them in the Solana blockchain.</p>
                   <p>It's a fantastic opportunity to get yourself an adorable Platty but also a matter of protecting them from extinction.</p>
                   <p>Let's ensure they have a safe future to continue to evolve with us for many more years as we enter a new blockchain age.</p>
