--- a/index.html
+++ b/index.html
@@ -608,8 +608,9 @@
               <div>   
                 <h2 class="section-title">Get In Touch</h2>
                 <div class="desc-text">
-                  <p>Email: info@endomint.com</p>
-                  <p>Twitter: <a href="https://twitter.com/FriendlyPlatty">@FriendlyPlatty</a></p><br>
+                  <p>Email: info@endomint.com</p><br>
+                  <p>Twitter: <a href="https://twitter.com/FriendlyPlatty">@FriendlyPlatty</a></p>
+                  <p>Discord: <a href="https://discord.gg/E7R7MsTXWF">https://discord.gg/E7R7MsTXWF</a></p><br>
                   <div class="contact-img">
                     <img src="img/contact/01.png" class="img-fluid" alt="">
                   </div>
