PlattyLogo for Pipedream

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                 <i class="lni-handshake"></i>
               </div>
               <h4><a href="https://twitter.com/bigdefi">BDE</a></h4>
-              <p>Built on Solana, Built Different.</p>
+              <p>Built on Solana, built Different. The Official Gym Coin.</p>
             </div>
           </div>
           <!-- End Col -->
