Fix Solana Cove link

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
               <div class="icon">
                 <i class="lni-handshake"></i>
               </div>
-              <h4><a href="https://compendium.finance/">Solana Cove</a></h4>
+              <h4><a href="https://twitter.com/SolanaCove/">Solana Cove</a></h4>
               <p>The best way to automate your crypto portfolio.</p>
             </div>
           </div>
