--- a/index.html
+++ b/index.html
@@ -392,7 +392,6 @@
                     <div class="fancy-table">
                       <div class="table-cell">
                         <div class="single-text">
-                          <p>Icon , Web</p>
                           <h5>Friendly Adult Platty</h5>
                         </div>
                         <div class="zoom-icon">
@@ -449,7 +448,7 @@
                     <div class="fancy-table">
                       <div class="table-cell">
                         <div class="single-text">
-                          <h5>Friendly Adult Platty</h5>
+                          <h5>Friendly Baby Platty</h5>
                         </div>
                         <div class="zoom-icon">
                           <a class="lightbox" href="img/showcase/01.png"><i class="lni-zoom-in"></i></a>
@@ -485,7 +484,6 @@
                     <div class="fancy-table">
                       <div class="table-cell">
                         <div class="single-text">
-                          <p>Icon , Web</p>
                           <h5>Friendly Adult Platty</h5>
                         </div>
                         <div class="zoom-icon">
@@ -541,7 +539,7 @@
                     <div class="fancy-table">
                       <div class="table-cell">
                         <div class="single-text">
-                          <h5>Friendly Adult Platty</h5>
+                          <h5>Friendly Baby Platty</h5>
                         </div>
                         <div class="zoom-icon">
                           <a class="lightbox" href="img/showcase/01.png"><i class="lni-zoom-in"></i></a>
