Revised lore of the platypus

--- a/index.html
+++ b/index.html
@@ -205,11 +205,10 @@
               <div>   
                 <h2 class="section-title">Meet your friendly Platty</h2>
                 <div class="desc-text">
-                  <p>The platypuses are known to have lived in Australia for millions of years. They are very cute and smart little animals who love to play with their friends.</p><br>
-                  <p>Following millions of years of evolution, the platypuses managed to escape the confinement of their physical bodies and migrate onto the Solana blockchain with the help of EndoMint where they reside now.</p><br>
-                  <p>This is why we're helping them in their evolution by bringing them into the digital realm and externalizing them in the Solana blockchain.</p>
-                  <p>It's a fantastic opportunity to get yourself an adorable Platty but also a matter of protecting them from extinction.</p>
-                  <p>Let's ensure they have a safe future to continue to evolve with us for many more years as we enter a new blockchain age.</p>
+                  <p>The platypuses are known to have lived in Australia for millions of years. These adorable and smart little animals can be found anywhere, from the steamy tropics of north Queensland to the freezing snows of Tasmania. Having been around for many millions of years they still burrow on the river banks just above the water level where they can be nice and cozy.</p><br>
+                  <p>Following millions of years of evolution, some platypuses managed to escape the confinement of their physical bodies and migrate onto the Solana blockchain where they now reside.</p><br>
+                  <p>The team at EndoMint has been helping them in their evolution by bringing them into the digital realm. The evolutionary goal of these digital platypuses has changed from the old analogue ways. As a way to find a safe wallet, they have developed beautiful patterns and colors to attract a human owner. As you read this, new eggs are close to being hatched.</p><br>
+                  <p>It's a fantastic opportunity to get yourself an adorable platypus who we affectionately call a Friendly Platty, while also protecting them from digital extinction. Let's ensure they have a safe future to continue to evolve with us for many more years as we enter a new blockchain age. Meet your Friendly Platty!</p>
                 </div>
               </div> 
             </div>
