--- a/index.html
+++ b/index.html
@@ -587,7 +587,7 @@
                 <div class="desc-text">
                   <p>Email: info@endomint.com</p><br>
                   <p>Twitter: <a href="https://twitter.com/FriendlyPlatty">@FriendlyPlatty</a></p>
-                  <p>Discord: <a href="https://discord.gg/wqZkUwDj">https://discord.gg/wqZkUwDj</a></p><br>
+                  <p>Discord: <a href="https://discord.gg/j5kGveSy5J">https://discord.gg/j5kGveSy5J</a></p><br>
                   <div class="contact-img">
                     <img src="img/contact/01.png" class="img-fluid" alt="">
                   </div>
