--- a/index.html
+++ b/index.html
@@ -24,10 +24,11 @@ body {
 <body class="body">
   <div class="columns w-row">
     <div class="leftcontent w-col w-col-6 w-col-stack">
-      <div data-w-id="b84f5156-c6e2-fb1d-6606-98a08030a472" style="opacity:0" class="image"></div>
+      <div data-w-id="5eb8f122-6b91-4080-bb2e-4a943d0e3d29" style="opacity:0" class="image"></div>
     </div>
     <div class="rightcontent w-col w-col-6 w-col-stack">
       <div data-w-id="3fd5aeb3-22da-ed60-7286-0d11f16597d3" style="opacity:0" class="content">
+        <div class="name">EndoMint</div>
         <h1 class="tagline"><strong class="bold-text">Collection 01 Friendly Platty</strong></h1>
         <p class="bio">The platypuses are known to have lived in Australia for millions of years. 
           These adorable and smart little animals can be found anywhere, from the steamy tropics of north Queensland to the freezing snows of Tasmania. 
@@ -68,8 +69,7 @@ body {
             </ul>
           </div>
         </div>
-        <div class="credit">©2021 EndoMint - <a href="https://endomint.com/" target="_blank" class="credit-links">Split Template</a> by <a href="https://onepagelove.com" target="_blank" class="credit-links">One Page Love</a>
-        </div>
+        <div class="credit">©2021 EndoMint</div>
       </div>
     </div>
   </div>
