Add Friendly Platty Pitch Deck

--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@ body {
             <div class="text-block-2">Friendly Platty</div>
             <ul role="list" class="list w-list-unstyled">
               <li>
+                <a href="pub/EndoMint-C01-FriendlyPlatty-PitchDeck.pdf">Pitch Deck</a>
+              </li>
+              <li>
                 <a href="https://twitter.com/FriendlyPlatty">Twitter</a>
               </li>
               <li>
