--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ body {
     <div class="rightcontent w-col w-col-6 w-col-stack">
       <div data-w-id="3fd5aeb3-22da-ed60-7286-0d11f16597d3" style="opacity:0" class="content">
         <div class="name">EndoMint</div>
-        <h1 class="tagline"><strong class="bold-text">Collection 01 Friendly Platty</strong></h1>
+        <h1 class="tagline"><strong class="bold-text">Project 01 Friendly Platty</strong></h1>
         <p class="bio">The platypuses are known to have lived in Australia for millions of years. 
           These adorable and smart little animals can be found anywhere, from the steamy tropics of north Queensland to the freezing snows of Tasmania. 
           Having been around for many millions of years they still burrow on the river banks just above the water level where they can be nice and cozy.</p>
