Update Discord invite link

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ body {
                 <a href="https://twitter.com/EndoMint/">Twitter</a>
               </li>
               <li>
-                <a href="https://discord.gg/EndoMint/">Discord</a>
+                <a href="https://discord.gg/j5kGveSy5J">Discord</a>
               </li>     
               <li>
                 <a href="https://endomint.medium.com/">Blog</a>
